--- a/TanksServer/TanksServer/MainWindow.xaml
+++ b/TanksServer/TanksServer/MainWindow.xaml
@@ -11,7 +11,8 @@
         Title="Tanks Server" Height="350" Width="525">
     <Grid Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="80"/>
+            <RowDefinition Height="5"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
@@ -28,7 +29,8 @@
                 <Label Content="{Binding ServerStatus, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
         </Grid>
-        <Grid Grid.Row="1">
+        <Separator Grid.Row="1" VerticalAlignment="Center"/>
+        <Grid Grid.Row="2" Margin="0 0 0 0" VerticalAlignment="Top" >
             <DataGrid ItemsSource="{Binding CurrentGames}">
             
             </DataGrid>
