--- a/TanksServer/GameServer/MainWindow.xaml
+++ b/TanksServer/GameServer/MainWindow.xaml
@@ -52,6 +52,10 @@
                 <Label Content="Server Port:"/>
                 <TextBox Text="{Binding ServerPort, UpdateSourceTrigger=PropertyChanged}" Height="20" VerticalAlignment="Top"/>
             </StackPanel>
+            <StackPanel Grid.Column="2" Orientation="Horizontal" Grid.Row="1">
+                <Label Content="Game Server Status:"/>
+                <Label Content="{Binding GameServerServerStatus, UpdateSourceTrigger=PropertyChanged}"/>
+            </StackPanel>
         </Grid>
         <Separator Grid.Row="1" VerticalAlignment="Center"/>
         <Grid Grid.Row="2" Margin="0 0 0 0" VerticalAlignment="Top" >
