--- a/TanksServer/TanksServer/MainWindow.xaml
+++ b/TanksServer/TanksServer/MainWindow.xaml
@@ -8,11 +8,12 @@
         xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
         Dialog:DialogParticipation.Register="{Binding}"
         mc:Ignorable="d"
-        Title="Tanks Server" Height="350" Width="525">
+        Title="Tanks Server" Height="550" Width="725">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
             <RowDefinition Height="5"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
@@ -43,6 +44,11 @@
         </Grid>
         <Grid Grid.Row="3" Margin="0 0 0 0" VerticalAlignment="Top" >
             <DataGrid ItemsSource="{Binding Log}">
+
+            </DataGrid>
+        </Grid>
+        <Grid Grid.Row="3" Margin="0 0 0 0" VerticalAlignment="Top" >
+            <DataGrid ItemsSource="{Binding GameServers}">
 
             </DataGrid>
         </Grid>
