--- a/TanksServer/ClientTester/MainWindow.xaml
+++ b/TanksServer/ClientTester/MainWindow.xaml
@@ -13,9 +13,14 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
-            <StackPanel Orientation="Horizontal">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="0" Orientation="Horizontal">
                 <StackPanel Grid.Column="0" Orientation="Horizontal">
                     <Label Content="Server IP:"/>
                     <TextBox Text="{Binding ServerIp, UpdateSourceTrigger=PropertyChanged}"/>
@@ -25,7 +30,7 @@
                     <TextBox Text="{Binding ServerPort, UpdateSourceTrigger=PropertyChanged}"/>
                 </StackPanel>
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
+            <StackPanel Grid.Row="1" Orientation="Horizontal">
                 <StackPanel Grid.Column="0" Orientation="Horizontal">
                     <Label Content="Game Server IP:"/>
                     <TextBox Text="{Binding GameServerIp, UpdateSourceTrigger=PropertyChanged}"/>
@@ -49,13 +54,19 @@
             <StackPanel Grid.Column="1">
                 <Button Content="Start Game" Command="{Binding StartGameCommand}" Margin="3" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource AccentedSquareButtonStyle}"/>
                 <Button Content="Stop Game" Command="{Binding StopGameCommand}" Margin="3" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource AccentedSquareButtonStyle}"/>
-                <Button Content="Send Move" Command="{Binding SendMoveCommand}" Margin="3" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource AccentedSquareButtonStyle}"/>
+                <Button Content="Request Open games" Command="{Binding AskOpenGamesCommand}" Margin="3" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource AccentedSquareButtonStyle}"/>
             </StackPanel>
             <StackPanel Grid.Column="2" Orientation="Horizontal">
                 <Label Content="Status:"/>
                 <Label Content="{Binding ServerStatus, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
         </Grid>
+        <Grid Grid.Row="2" Margin="0 0 0 0" VerticalAlignment="Top" >
+            <DataGrid ItemsSource="{Binding GameServers}">
+
+            </DataGrid>
+        </Grid>
+        
         
     </Grid>
 </Controls:MetroWindow>
